# opengl-animation

./: .gitignore  .gitmodules  CMakeLists.txt  GLFW_App 2  README.md
models/: SambaDancing.fbx  SkinningTest.fbx
models/Firehydrant/: firehydrant.mtl
models/bird/: animated.fbx  bird.fbx  boid.fbx
models/box/wooden_crate/: scene.gltf
models/campfire/: Campfire.mtl
models/character/: character.fbx
models/nasa-mobile-launcher/: license.txt
models/quake/: stalwart.fbx  stalwart.gltf
models/quake/game_level/: game.fbx
models/quake/game_level_roofed/: scene.gltf
models/quake/map-13agony/levelshots/: 13agony.tga
models/quake/map-13agony/maps/: 13agony.aas  13agony.bsp
models/quake/map-13agony/scripts/: 13agony.arena  13agony.shader
models/quake/map-13agony/textures/13agony/: q3abanner_red.tga
models/quake/stalwart-map/: map.dae  map.mtl  stalwart-gltf.glb  stalwart.fbx  stalwart.gltf
models/tiles/: Street_Bridge_Underpass.fbx
models/train/: steam-train.mtl
src/: BasicTemplate.cpp  Particles.cpp  Particles.hpp  ShaderStuff.hpp  common.h  fshader.glsl  main.cpp  particles.h  samplemain.cpp  scene.cpp  scene.h  scene.hpp  shader.frag  shader.hpp  shader.vert  vshader.glsl
src/behaviors/: boid.cpp  boid.h  follow_path.cpp  follow_path.h
src/entities/: ball.cpp  ball.h  bird.cpp  bird.h  box.cpp  box.h  entity.cpp  entity.h  player.cpp  player.h
src/geometry/: Sphere.cpp  Sphere.h  cloth.cpp  cloth.h  cylinder.cpp  cylinder.h  draggable.h  floor.cpp  floor.h  fluid.cpp  fluid.h  mesh.cpp  mesh.h  model.cpp  model.h  particles.cpp  particles.h  shallow_fluid.cpp  shallow_fluid.h  skinned_mesh.cpp  skinned_mesh.h  skinned_model.cpp  skinned_model.h
src/renderers/: lines.cpp  lines.h  phong.cpp  phong.h  renderable.cpp  renderable.h
src/shaders/: fluid.frag  fluid.vert  particles.frag  particles.vert  path.frag  path.vert  phong.frag  phong.vert  text.vert
src/utils/: 3d_fluid_solver.cpp  GLError.cpp  GLError.h  Moller97.c  cg.cpp  cg.hpp  obb.cpp  obb.h  roadmap.cpp  roadmap.h  shader.cpp  shader.h  text2d.cpp  text2d.h  texture.cpp  texture.h  tile_solver.cpp  tile_solver.h
src/world/: tile.cpp  tile.h  world.cpp  world.h
